--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
         <div id="blog-carousel" class="carousel slide overlay-bottom" data-ride="carousel">
             <div class="carousel-inner">
                 <div class="carousel-item active">
-                    <img  src="img/carousel-1.jpg" alt="Image">
+                    <img  src="carousel-1.jpg" alt="Image">
                     <div class="carousel-caption d-flex flex-column align-items-center justify-content-center">
                         <h2 class="text-primary font-weight-medium m-0">We Have Been Serving</h2>
                         <h1 class="display-1 text-white m-0">COFFEE</h1>
@@ -69,7 +69,7 @@
                     </div>
                 </div>
                 <div class="carousel-item">
-                    <img src="img/carousel-2.jpg" alt="Image">
+                    <img src="carousel-2.jpg" alt="Image">
                     <div class="carousel-caption d-flex flex-column align-items-center justify-content-center">
                         <h2 class="text-primary font-weight-medium m-0">We Have Been Serving</h2>
                         <h1 class="display-1 text-white m-0">COFFEE</h1>
