--- a/index.html
+++ b/index.html
@@ -77,7 +77,13 @@
                     </div>
                 </div>
             </div>
-           
+                       <a class="carousel-control-prev" href="#blog-carousel" data-slide="prev">
+                <span class="carousel-control-prev-icon"></span>
+            </a>
+            <a class="carousel-control-next" href="#blog-carousel" data-slide="next">
+                <span class="carousel-control-next-icon"></span>
+            </a>
+
             
         </div>
     </div>
