--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
         <div id="blog-carousel" class="carousel slide overlay-bottom" data-ride="carousel">
             <div class="carousel-inner">
                 <div class="carousel-item active">
-                    <img  src="carousel-1.jpg" alt="Image">
+                    <img  class="w-100" src="carousel-1.jpg" alt="Image">
                     <div class="carousel-caption d-flex flex-column align-items-center justify-content-center">
                         <h2 class="text-primary font-weight-medium m-0">We Have Been Serving</h2>
                         <h1 class="display-1 text-white m-0">COFFEE</h1>
@@ -69,7 +69,7 @@
                     </div>
                 </div>
                 <div class="carousel-item">
-                    <img src="carousel-2.jpg" alt="Image">
+                    <img class="w-100" src="carousel-2.jpg" alt="Image">
                     <div class="carousel-caption d-flex flex-column align-items-center justify-content-center">
                         <h2 class="text-primary font-weight-medium m-0">We Have Been Serving</h2>
                         <h1 class="display-1 text-white m-0">COFFEE</h1>
@@ -106,7 +106,7 @@
                 </div>
                 <div class="col-lg-4 py-5 py-lg-0" style="min-height: 500px;">
                     <div class="position-relative h-100">
-                        <img src="about.png" style="object-fit: cover;">
+                        <img class="position-absolute w-100 h-100" src="about.png" style="object-fit: cover;">
                     </div>
                 </div>
                 <div class="col-lg-4 py-0 py-lg-5">
@@ -134,7 +134,7 @@
                 <div class="col-lg-6 mb-5">
                     <div class="row align-items-center">
                         <div class="col-sm-5">
-                            <img src="service-1.jpg" alt="">
+                            <img class="img-fluid mb-3 mb-sm-0" src="service-1.jpg" alt="">
                         </div>
                         <div class="col-sm-7">
                             <h4><i class="fa fa-truck service-icon"></i>Fastest Door Delivery</h4>
@@ -145,7 +145,7 @@
                 <div class="col-lg-6 mb-5">
                     <div class="row align-items-center">
                         <div class="col-sm-5">
-                            <img src="service-2.jpg" alt="">
+                            <img class="img-fluid mb-3 mb-sm-0" src="service-2.jpg" alt="">
                         </div>
                         <div class="col-sm-7">
                             <h4><i class="fa fa-coffee service-icon"></i>Fresh Coffee Beans</h4>
@@ -156,7 +156,7 @@
                 <div class="col-lg-6 mb-5">
                     <div class="row align-items-center">
                         <div class="col-sm-5">
-                            <img src="service-3.jpg" alt="">
+                            <img class="img-fluid mb-3 mb-sm-0" src="service-3.jpg" alt="">
                         </div>
                         <div class="col-sm-7">
                             <h4><i class="fa fa-award service-icon"></i>Best Quality Coffee</h4>
@@ -167,7 +167,7 @@
                 <div class="col-lg-6 mb-5">
                     <div class="row align-items-center">
                         <div class="col-sm-5">
-                            <img src="service-4.jpg" alt="">
+                            <img class="img-fluid mb-3 mb-sm-0" src="service-4.jpg" alt="">
                         </div>
                         <div class="col-sm-7">
                             <h4><i class="fa fa-table service-icon"></i>Online Table Booking</h4>
@@ -212,7 +212,7 @@
                     <h1 class="mb-5">Hot Coffee</h1>
                     <div class="row align-items-center mb-5">
                         <div class="col-4 col-sm-3">
-                            <img src="menu-1.jpg" alt="">
+                            <img class="w-100 rounded-circle mb-3 mb-sm-0" src="menu-1.jpg" alt="">
                             <h5 class="menu-price">150₹</h5>
                         </div>
                         <div class="col-8 col-sm-9">
@@ -225,7 +225,7 @@
                     </div>
                     <div class="row align-items-center mb-5">
                         <div class="col-4 col-sm-3">
-                            <img src="menu-2.jpg" alt="">
+                            <img class="w-100 rounded-circle mb-3 mb-sm-0" src="menu-2.jpg" alt="">
                             <h5 class="menu-price">200₹</h5>
                         </div>
                         <div class="col-8 col-sm-9">
@@ -235,7 +235,7 @@
                     </div>
                     <div class="row align-items-center mb-5">
                         <div class="col-4 col-sm-3">
-                            <img src="menu-3.jpg" alt="">
+                            <img class="w-100 rounded-circle mb-3 mb-sm-0" src="menu-3.jpg" alt="">
                             <h5 class="menu-price">250₹</h5>
                         </div>
                         <div class="col-8 col-sm-9">
@@ -248,7 +248,7 @@
                     <h1 class="mb-5">Cold Coffee</h1>
                     <div class="row align-items-center mb-5">
                         <div class="col-4 col-sm-3">
-                            <img src="menu-1.jpg" alt="">
+                            <img class="w-100 rounded-circle mb-3 mb-sm-0" src="menu-1.jpg" alt="">
                             <h5 class="menu-price">150₹</h5>
                         </div>
                         <div class="col-8 col-sm-9">
@@ -261,7 +261,7 @@
                     </div>
                     <div class="row align-items-center mb-5">
                         <div class="col-4 col-sm-3">
-                            <img src="menu-2.jpg" alt="">
+                            <img class="w-100 rounded-circle mb-3 mb-sm-0" src="menu-2.jpg" alt="">
                             <h5 class="menu-price">200₹</h5>
                         </div>
                         <div class="col-8 col-sm-9">
@@ -271,7 +271,7 @@
                     </div>
                     <div class="row align-items-center mb-5">
                         <div class="col-4 col-sm-3">
-                            <img src="menu-3.jpg" alt="">
+                            <img class="w-100 rounded-circle mb-3 mb-sm-0" src="menu-3.jpg" alt="">
                             <h5 class="menu-price">250₹</h5>
                         </div>
                         <div class="col-8 col-sm-9">
@@ -361,7 +361,7 @@
             <div class="owl-carousel testimonial-carousel">
                 <div class="testimonial-item">
                     <div class="d-flex align-items-center mb-3">
-                        <img src="testimonial-1.jpg" alt="">
+                        <img class="img-fluid" src="testimonial-1.jpg" alt="">
                         <div class="ml-3">
                             <h4>Nita Sharma</h4>
                             <i>Teacher</i>
@@ -371,7 +371,7 @@
                 </div>
                 <div class="testimonial-item">
                     <div class="d-flex align-items-center mb-3">
-                        <img src="testimonial-2.jpg" alt="">
+                        <img class="img-fluid" src="testimonial-2.jpg" alt="">
                         <div class="ml-3">
                             <h4>Ritik Singh</h4>
                             <i>Sofware Devloper</i>
@@ -381,7 +381,7 @@
                 </div>
                 <div class="testimonial-item">
                     <div class="d-flex align-items-center mb-3">
-                        <img src="testimonial-3.jpg" alt="">
+                        <img class="img-fluid" src="testimonial-3.jpg" alt="">
                         <div class="ml-3">
                             <h4>Saniya Rathor</h4>
                             <i>Writter</i>
@@ -391,7 +391,7 @@
                 </div>
                 <div class="testimonial-item">
                     <div class="d-flex align-items-center mb-3">
-                        <img src="testimonial-4.jpg" alt="">
+                        <img class="img-fluid" src="testimonial-4.jpg" alt="">
                         <div class="ml-3">
                             <h4>Mangesh Sharma</h4>
                             <i>Designer</i>
