--- a/index.html
+++ b/index.html
@@ -358,7 +358,7 @@
                 <h4 class="text-primary text-uppercase" style="letter-spacing: 5px;">Testimonial</h4>
                 <h1 class="display-4">Our Clients Say</h1>
             </div>
-            <div class="owl-carousel testimonial-carousel owl-carousel.owl-loaded">
+            <div class="owl-carousel testimonial-carousel owl-carousel owl-loaded">
                 <div class="testimonial-item">
                     <div class="d-flex align-items-center mb-3">
                         <img class="img-fluid" src="testimonial-1.jpg" alt="">
