--- a/about.html
+++ b/about.html
@@ -93,9 +93,9 @@
                 <div class="col-lg-4 py-0 py-lg-5">
                     <h1 class="mb-3">Our Vision</h1>
                     <p>Starbucks' vision statement says, "to establish Starbucks as the premier purveyor of the finest coffee in the world while maintaining our uncompromising principles while we grow." Aiming to be the leading purveyor means achieving leadership in ensuring its coffee and other products are of the best qualities.</p>
-                    <h5 class="mb-3"><i class="fa fa-check text-primary mr-3"></i>Lorem ipsum dolor sit amet</h5>
-                    <h5 class="mb-3"><i class="fa fa-check text-primary mr-3"></i>Lorem ipsum dolor sit amet</h5>
-                    <h5 class="mb-3"><i class="fa fa-check text-primary mr-3"></i>Lorem ipsum dolor sit amet</h5>
+                    <h5 class="mb-3"><i class="fa fa-check text-primary mr-3"></i>Quality Brand</h5>
+                    <h5 class="mb-3"><i class="fa fa-check text-primary mr-3"></i>Preferably Organic</h5>
+                    <h5 class="mb-3"><i class="fa fa-check text-primary mr-3"></i>Add Some Cocoa to Your Coffee</h5>
                     <a href="" class="btn btn-primary font-weight-bold py-2 px-4 mt-2">Learn More</a>
                 </div>
             </div>
