--- a/service.html
+++ b/service.html
@@ -86,8 +86,7 @@
                         </div>
                         <div class="col-sm-7">
                             <h4><i class="fa fa-truck service-icon"></i>Fastest Door Delivery</h4>
-                            <p class="m-0">Sit lorem ipsum et diam elitr est dolor sed duo. Guberg sea et et lorem dolor sed est sit
-                                invidunt, dolore tempor diam ipsum takima erat tempor</p>
+                            <p class="m-0">while roasted coffee needs to be able to survive the journey to customers and maintain freshness up until the moment of consumption. Two of the most common methods of shipping coffee are by sea and by air.</p>
                         </div>
                     </div>
                 </div>
@@ -98,8 +97,7 @@
                         </div>
                         <div class="col-sm-7">
                             <h4><i class="fa fa-coffee service-icon"></i>Fresh Coffee Beans</h4>
-                            <p class="m-0">Sit lorem ipsum et diam elitr est dolor sed duo. Guberg sea et et lorem dolor sed est sit
-                                invidunt, dolore tempor diam ipsum takima erat tempor</p>
+                            <p class="m-0">Most coffees require at least a few days after roast to taste their best. Thus, the best coffee isn't fresh off the roaster by any means. But, buying fresh roasted coffee gives you the maximum number of days where it is tasting its best.</p>
                         </div>
                     </div>
                 </div>
@@ -110,8 +108,7 @@
                         </div>
                         <div class="col-sm-7">
                             <h4><i class="fa fa-award service-icon"></i>Best Quality Coffee</h4>
-                            <p class="m-0">Sit lorem ipsum et diam elitr est dolor sed duo. Guberg sea et et lorem dolor sed est sit
-                                invidunt, dolore tempor diam ipsum takima erat tempor</p>
+                            <p class="m-0">For coffee enthusiasts, there is nothing quite as satisfying as grinding fresh whole coffee beans and brewing a cup of rich, flavorful coffee.</p>
                         </div>
                     </div>
                 </div>
@@ -122,8 +119,7 @@
                         </div>
                         <div class="col-sm-7">
                             <h4><i class="fa fa-table service-icon"></i>Online Table Booking</h4>
-                            <p class="m-0">Sit lorem ipsum et diam elitr est dolor sed duo. Guberg sea et et lorem dolor sed est sit
-                                invidunt, dolore tempor diam ipsum takima erat tempor</p>
+                            <p class="m-0">Customers reserve the table through the app or web; they can even scan QR code to reserve the table of their choice at the restaurant. Customer order food after exploring category and subcategory on the table booking system.</p>
                         </div>
                     </div>
                 </div>
