--- a/menu.html
+++ b/menu.html
@@ -84,31 +84,31 @@
                     <div class="row align-items-center mb-5">
                         <div class="col-4 col-sm-3">
                             <img class="w-100 rounded-circle mb-3 mb-sm-0" src="menu-1.jpg" alt="">
-                            <h5 class="menu-price">$5</h5>
+                            <h5 class="menu-price">150₹</h5>
                         </div>
                         <div class="col-8 col-sm-9">
                             <h4>Black Coffee</h4>
-                            <p class="m-0">Sit lorem ipsum et diam elitr est dolor sed duo guberg sea et et lorem dolor</p>
+                            <p class="m-0">Below, we discuss black coffee benefits for weight loss. ... It helps elevate mood and productivity. ...</p>
                         </div>
                     </div>
                     <div class="row align-items-center mb-5">
                         <div class="col-4 col-sm-3">
                             <img class="w-100 rounded-circle mb-3 mb-sm-0" src="menu-2.jpg" alt="">
-                            <h5 class="menu-price">$7</h5>
+                            <h5 class="menu-price">200₹</h5>
                         </div>
                         <div class="col-8 col-sm-9">
                             <h4>Chocolete Coffee</h4>
-                            <p class="m-0">Sit lorem ipsum et diam elitr est dolor sed duo guberg sea et et lorem dolor</p>
+                            <p class="m-0">Chocolate and coffee are a natural pairing so it's safe to say that adding hot cocoa mix to coffee makes for some wonderful results.</p>
                         </div>
                     </div>
                     <div class="row align-items-center mb-5">
                         <div class="col-4 col-sm-3">
                             <img class="w-100 rounded-circle mb-3 mb-sm-0" src="menu-3.jpg" alt="">
-                            <h5 class="menu-price">$9</h5>
+                            <h5 class="menu-price">250₹</h5>
                         </div>
                         <div class="col-8 col-sm-9">
                             <h4>Coffee With Milk</h4>
-                            <p class="m-0">Sit lorem ipsum et diam elitr est dolor sed duo guberg sea et et lorem dolor</p>
+                            <p class="m-0">A latte, much like a cappuccino, is a combination of espresso and steamed milk.</p>
                         </div>
                     </div>
                 </div>
@@ -117,31 +117,31 @@
                     <div class="row align-items-center mb-5">
                         <div class="col-4 col-sm-3">
                             <img class="w-100 rounded-circle mb-3 mb-sm-0" src="menu-1.jpg" alt="">
-                            <h5 class="menu-price">$5</h5>
+                            <h5 class="menu-price">150₹</h5>
                         </div>
                         <div class="col-8 col-sm-9">
                             <h4>Black Coffee</h4>
-                            <p class="m-0">Sit lorem ipsum et diam elitr est dolor sed duo guberg sea et et lorem dolor</p>
+                            <p class="m-0">Below, we discuss black coffee benefits for weight loss. ... It helps elevate mood and productivity. ...</p>
                         </div>
                     </div>
                     <div class="row align-items-center mb-5">
                         <div class="col-4 col-sm-3">
                             <img class="w-100 rounded-circle mb-3 mb-sm-0" src="menu-2.jpg" alt="">
-                            <h5 class="menu-price">$7</h5>
+                            <h5 class="menu-price">200₹</h5>
                         </div>
                         <div class="col-8 col-sm-9">
                             <h4>Chocolete Coffee</h4>
-                            <p class="m-0">Sit lorem ipsum et diam elitr est dolor sed duo guberg sea et et lorem dolor</p>
+                            <p class="m-0">Chocolate and coffee are a natural pairing so it's safe to say that adding hot cocoa mix to coffee makes for some wonderful results</p>
                         </div>
                     </div>
                     <div class="row align-items-center mb-5">
                         <div class="col-4 col-sm-3">
                             <img class="w-100 rounded-circle mb-3 mb-sm-0" src="menu-3.jpg" alt="">
-                            <h5 class="menu-price">$9</h5>
+                            <h5 class="menu-price">250₹</h5>
                         </div>
                         <div class="col-8 col-sm-9">
                             <h4>Coffee With Milk</h4>
-                            <p class="m-0">Sit lorem ipsum et diam elitr est dolor sed duo guberg sea et et lorem dolor</p>
+                            <p class="m-0">A latte, much like a cappuccino, is a combination of espresso and steamed milk.</p>
                         </div>
                     </div>
                 </div>
