--- a/reservation.html
+++ b/reservation.html
@@ -82,12 +82,12 @@
                                 <h1 class="display-3 text-primary">30% OFF</h1>
                                 <h1 class="text-white">For Online Reservation</h1>
                             </div>
-                            <p class="text-white">Lorem justo clita erat lorem labore ea, justo dolor lorem ipsum ut sed eos,
-                                ipsum et dolor kasd sit ea justo. Erat justo sed sed diam. Ea et erat ut sed diam sea</p>
+                            <p class="text-white">The online booking system follows a few simple steps: the customer visits the business's website or mobile application, selects the type of service they want to book, confirms their selected date and time are available, enters their contact information such as name, email address and phone number, and then makes ...</p>
                             <ul class="list-inline text-white m-0">
-                                <li class="py-2"><i class="fa fa-check text-primary mr-3"></i>Lorem ipsum dolor sit amet</li>
-                                <li class="py-2"><i class="fa fa-check text-primary mr-3"></i>Lorem ipsum dolor sit amet</li>
-                                <li class="py-2"><i class="fa fa-check text-primary mr-3"></i>Lorem ipsum dolor sit amet</li>
+                                <li class="py-2"><i class="fa fa-check text-primary mr-3"></i>Skiplino Lite</li>
+                                <li class="py-2"><i class="fa fa-check text-primary mr-3"></i>Eat App</li>
+                                <li class="py-2"><i class="fa fa-check text-primary mr-3"></i>Wisely</li>
+                                <li class="py-2"><i class="fa fa-check text-primary mr-3"></i>OpenTable</li>
                             </ul>
                         </div>
                     </div>
@@ -147,7 +147,7 @@
             </div>
             <div class="col-lg-3 col-md-6 mb-5">
                 <h4 class="text-white text-uppercase mb-4" style="letter-spacing: 3px;">Follow Us</h4>
-                <p>Amet elitr vero magna sed ipsum sit kasd sea elitr lorem rebum</p>
+                <p>Follo this applicatin and visit our wonderfull cafe Thank you.....</p>
                 <div class="d-flex justify-content-start">
                     <a class="btn btn-lg btn-outline-light btn-lg-square mr-2" href="#"><i class="fab fa-twitter"></i></a>
                     <a class="btn btn-lg btn-outline-light btn-lg-square mr-2" href="#"><i class="fab fa-facebook-f"></i></a>
@@ -162,18 +162,6 @@
                     <p>8.00 AM - 8.00 PM</p>
                     <h6 class="text-white text-uppercase">Saturday - Sunday</h6>
                     <p>2.00 PM - 8.00 PM</p>
-                </div>
-            </div>
-            <div class="col-lg-3 col-md-6 mb-5">
-                <h4 class="text-white text-uppercase mb-4" style="letter-spacing: 3px;">Newsletter</h4>
-                <p>Amet elitr vero magna sed ipsum sit kasd sea elitr lorem rebum</p>
-                <div class="w-100">
-                    <div class="input-group">
-                        <input type="text" class="form-control border-light" style="padding: 25px;" placeholder="Your Email">
-                        <div class="input-group-append">
-                            <button class="btn btn-primary font-weight-bold px-3">Sign Up</button>
-                        </div>
-                    </div>
                 </div>
             </div>
         </div>
