--- a/testimonial.html
+++ b/testimonial.html
@@ -121,6 +121,55 @@
                 </div>
             </div>
         </div>
+    </div><div class="container-fluid py-5">
+        <div class="container">
+            <div class="section-title">
+                <h4 class="text-primary text-uppercase" style="letter-spacing: 5px;">Testimonial</h4>
+                <h1 class="display-4">Our Clients Say</h1>
+            </div>
+            <div class="owl-carousel testimonial-carousel owl-carousel owl-loaded">
+                <div class="testimonial-item">
+                    <div class="d-flex align-items-center mb-3">
+                        <img class="img-fluid" src="testimonial-1.jpg" alt="">
+                        <div class="ml-3">
+                            <h4>Nita Sharma</h4>
+                            <i>Teacher</i>
+                        </div>
+                    </div>
+                    <p class="m-0">Friendly staff</p>
+                </div>
+                <div class="testimonial-item">
+                    <div class="d-flex align-items-center mb-3">
+                        <img class="img-fluid" src="testimonial-2.jpg" alt="">
+                        <div class="ml-3">
+                            <h4>Ritik Singh</h4>
+                            <i>Sofware Devloper</i>
+                        </div>
+                    </div>
+                    <p class="m-0">good WiFi, large windows (natural light),</p>
+                </div>
+                <div class="testimonial-item">
+                    <div class="d-flex align-items-center mb-3">
+                        <img class="img-fluid" src="testimonial-3.jpg" alt="">
+                        <div class="ml-3">
+                            <h4>Saniya Rathor</h4>
+                            <i>Writter</i>
+                        </div>
+                    </div>
+                    <p class="m-0"> open spaces, clean restrooms</p>
+                </div>
+                <div class="testimonial-item">
+                    <div class="d-flex align-items-center mb-3">
+                        <img class="img-fluid" src="testimonial-4.jpg" alt="">
+                        <div class="ml-3">
+                            <h4>Mangesh Sharma</h4>
+                            <i>Designer</i>
+                        </div>
+                    </div>
+                    <p class="m-0">comfortable seating</p>
+                </div>
+            </div>
+        </div>
     </div>
     <!-- Testimonial End -->
 
